feat: complete auth